2011-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c (prepare_pam_close_session): Extract the creation of a
	child and listening for signal in the parent from run_shell().
	prepare_pam_close_session() is now executed before the creation of
	the pam session and before the UID is changed. This allows to
	close the session as root.
	* src/su.c: Also drop the controlling terminal when PAM is not
	used.
	* src/su.c: Remove run_shell().
	* src/su.c: After prepare_pam_close_session() there is no need to
	close the session in the child. Added pam_setcred to
	prepare_pam_close_session().

2011-06-12  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c (save_caller_context): Extract from main() the code
	used to save the caller's context.
	* src/su.c: Split check_perms() in to a PAM (check_perms_pam) and
	a non-PAM (check_perms_nopam) version.
	* src/su.c: Cleanup check_perms_nopam().
	* src/su.c: Merge environment setting blocks after the creation of
	the session.
	* src/su.c: Close the password databases together with syslog.
	* src/su.c: Extract command line processing from main().
	* src/su.c: Extract export of environment from main().

2011-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Group some of the environment processing blocks. The
	definition of shellstr, PATH and IFS is not influenced (getenv,
	getdef, restricted_shell) by and does not influence (addenv does
	not change environ) the authentication. And the authentication
	did not overwrite those definitions. This will ease an extraction
	from the big main() function.
	* src/su.c: Move definition of change_environment and shellstr
	after the switch to the final subsystem. The previous architecture
	forced to always change the environment (the shell starts with a
	'*' and was thus restricted, and change_environment could not be
	reset to false).
	* src/su.c: No need to change the user's shell in case of
	subsystem root. Update the comments.